# DiabetesType1

./: .dockerignore  Dockerfile  LICENSE.md  README.md  app.py  glucose.py  main.py  pyproject.toml
.github/workflows/: docker-buildx.yml
DemoFiles/: cgm.csv  insulin.csv
github/workflows/: docker-build.yml
